src/sass/main.scss
$pink: #fc484c;
$background: #f0ead6;
$blue: #468fff;

@import 'icons';

@font-face {
  font-family: tondu;
  src: url(../fonts/Tondu_Beta.otf);
}

@font-face {
  font-family: ele;
  src: url(../fonts/elephant.otf);
}

section {
  width: 650px;
  height: 100vh;
  display: inline-block;
  vertical-align: top;
  position: relative;
  background-color: $background;

  &.header {
    .vertical-wrapper {
      left:50%;
      transform:translate(-50%, -50%);
      @media (max-width: 600px) {
        width: auto;
      }
    }
    background-color: $pink;
    padding: 0 20px;
    //width: 50vw;
    @media (max-width: 600px) {
      width: 100vw;
    }
    img {
      width: 100px;
      margin-left: 10px;
    }
    h1 {
      font-family: 'ele', 'tondu', Helvetica;
      text-transform: uppercase;
      color: white;
      letter-spacing: .8px;
      font-size: 70px;
      line-height: .9;
      text-align: left;
      margin: 0 0 75px 0;
      @media (max-width: 600px) {
        font-size: 58px;
      }
      @media (max-width: 450px) {
        font-size: 48px;
      }
      @media (max-width: 350px) {
        font-size: 40px;
      }
      span {
        font-size: 1.7em;
        display: block;
      }
    }
    p {
      padding: 0;
      color: white;
      text-align: center;
      @media (max-width: 600px) {
        font-size: 14px;
      }
    }
  }
  &.form {
    .vertical-wrapper {
      background-image: url('../img/unnamed.jpg');
      background-size: cover;
      background-position: center;
      height: 450px;
    }

    form {
      padding: 15px;
      margin: 130px 30px;
      background-color: rgba(255,255,255, 0.6);
      label {
        display: block;
        font-size: 16px;
        font-family: monospace;
        margin: 0 auto;
        text-align: center;
      }
      input {
        display: block;
        margin: 0 auto;
      }
      input[type="text"] {
        margin: 15px auto;
        border: 1px dashed $pink;
        padding: 8px 10px;
      }
      input[type="submit"] {
        background-color: $blue;
        color: white;
        border: 0;
        padding: 5px 8px;
        cursor: pointer;
      }
    }
  }
  .vertical-wrapper {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    @media (max-width: 600px) {
      width: 100%;
    }
    p {
      @media (max-width: 600px) {
        width: 100vw;
        margin: 0 auto;
      }
    }
  }
  p {
    padding: 40px;
    font-size: 1.5em;
    font-family: monospace;
    line-height: 1.3;
    @media (max-width: 600px) {
      font-size: 14px;
    }
  }
}

.hover-me-rainbow {
  background-image: url(../img/rainbow.gif);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.hover-me {
  padding-bottom: 3px;
  background-repeat: repeat-x;
  background-position: center bottom -2px;
  background-size: auto 44%;
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='Squiggle-svg' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 10'%3E%3Cstyle%3E.st0{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0) scale(.447) translate(-17px, -40px);}to {transform:translateX(-6%) scale(.447) translate(-17px, -40px);}} %3C/style%3E%3Cpath fill='#468fff' class='st0' d='M84.582 59.425c-2.673 0-3.36-3.843-4.31-9.162-.33-1.833-.83-4.646-1.357-6.05-.525 1.404-1.028 4.217-1.355 6.05-.95 5.318-1.637 9.16-4.31 9.16-2.67 0-3.355-3.842-4.305-9.16-.327-1.832-.828-4.64-1.353-6.048-.525 1.407-1.027 4.216-1.354 6.048-.95 5.318-1.637 9.16-4.308 9.16s-3.357-3.842-4.307-9.16c-.327-1.832-.83-4.64-1.354-6.048-.525 1.407-1.027 4.216-1.355 6.047-.95 5.32-1.636 9.162-4.307 9.162-2.67 0-3.357-3.843-4.307-9.16-.326-1.832-.828-4.64-1.352-6.048-.524 1.407-1.025 4.215-1.353 6.046-.95 5.32-1.635 9.162-4.306 9.162-2.67 0-3.356-3.843-4.305-9.16-.327-1.832-.828-4.64-1.352-6.046-.524 1.407-1.025 4.215-1.352 6.045-.948 5.318-1.634 9.16-4.305 9.16-2.67 0-3.357-3.842-4.306-9.16-.328-1.832-.83-4.64-1.354-6.047-.524 1.407-1.026 4.216-1.353 6.047-.95 5.318-1.635 9.16-4.306 9.16s-3.357-3.842-4.307-9.16c-.396-2.215-1.047-5.86-1.685-6.725C10 43.388 9.5 42.79 9.5 42.075c0-.83.67-1.5 1.5-1.5 2.67 0 3.357 3.843 4.307 9.16.327 1.833.83 4.642 1.354 6.05.525-1.408 1.027-4.217 1.354-6.05.95-5.317 1.635-9.16 4.306-9.16s3.357 3.843 4.306 9.16c.327 1.832.83 4.64 1.353 6.048.523-1.407 1.024-4.216 1.352-6.047.95-5.318 1.635-9.16 4.306-9.16 2.67 0 3.355 3.842 4.304 9.16.327 1.83.828 4.638 1.352 6.046.524-1.408 1.025-4.216 1.352-6.046.95-5.318 1.635-9.16 4.305-9.16 2.672 0 3.358 3.842 4.308 9.16.327 1.832.83 4.642 1.354 6.048.525-1.406 1.027-4.216 1.354-6.048.95-5.318 1.636-9.16 4.307-9.16s3.357 3.842 4.307 9.16c.327 1.832.83 4.642 1.354 6.05.525-1.407 1.027-4.218 1.354-6.05.95-5.318 1.637-9.16 4.308-9.16s3.356 3.842 4.306 9.16c.327 1.832.83 4.642 1.354 6.05.525-1.407 1.027-4.218 1.354-6.05.95-5.318 1.637-9.16 4.31-9.16s3.357 3.84 4.31 9.16c.327 1.833.83 4.65 1.356 6.053.526-1.405 1.03-4.22 1.357-6.054.95-5.318 1.638-9.16 4.31-9.16.83 0 1.5.67 1.5 1.5 0 .714-.5 1.312-1.17 1.462-.64.863-1.29 4.51-1.687 6.726-.955 5.318-1.64 9.16-4.314 9.16z'/%3E%3C/svg%3E");
  &:hover {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20xmlns%3Axlink%3D%27http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%27%20xmlns%3Aev%3D%27http%3A%2F%2Fwww.w3.org%2F2001%2Fxml-events%27%20viewBox%3D%270%200%2020%2010%27%3E%3Cstyle%3E.st2%7Btransform%3Atranslate%28-60px%2C%20-80px%29%7D%3C%2Fstyle%3E%3Cpath%20fill%3D%27%232C185B%27%20stroke%3D%27%23468fff%27%20class%3D%27st2%27%20d%3D%27M%2059.425%2086.582%20L%2085.16%2086.582%27%2F%3E%3C%2Fsvg%3E");
  }
  img {
    display: none;
  }

  &:hover {
    img {
      display: block;
      position: absolute;
      z-index: 999;
      max-width: 200px;
    }
  }

  &.hover-top {
    img {
      top: -100px;
      left: random(300) + px;
    }
  }

  &.hover-bottom {
    img {
      bottom: -100px;
      left: random(300) + px;
    }
  }
}

.phone-container {
  position: relative;
  position: absolute;
  top: 0px;
  left: -55px;
  cursor: pointer;
  &:hover {
    .circle-svg {
      animation-play-state: paused;
    }
  }

  img {
    width: 75px;
    position: relative;
    top: 75px;
    // left: -55px;
  }

  .circle-svg {
    // position: absolute;
    // top:-220px;
    // left:-340px;
  }
}

.mail-container {
  position: absolute;
  bottom: 74px;
  left: 450px;
  cursor: pointer;
  &:hover {
    .circle-svg {
      animation-play-state: paused;
    }
  }
  .circle-svg {
    /*In event of headache turn off.*/
    animation: spin2 20s linear infinite;
    transform: scale(2.2) rotate(0deg);
  }
  .text {
    font-size: 16.5px;
  }

  img {
    width: 95px;
    position: relative;
    top: 85px;
  }
}

.circle-svg {
  /*In event of headache turn off.*/
  animation: spin 20s linear infinite;
  transform: scale(2.75) rotate(0deg);
  .text {
    fill: $pink;
  }
}

#contact {
  display: block;
  margin-top: 15px;
  position: absolute;
  transform: translateX(-50%);
  bottom:20px;
  left: 50%;
  text-align: center;
  width: 400px;
  .icon {
    text-decoration: none;
    font-size:24px;
    padding: 5px 5px;
    &:before {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: FontAwesome;
        font-style: normal;
        font-weight: normal;
        text-transform: none !important;
        color: #ececec;
    }
  }
}


main {
  width: calc(650px * 8);
  height: 100vh;
  position: absolute;
  overflow-y: hidden;
  overflow: auto;
  -webkit-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: transform;
}

body {
  width: 100%;
  height: 100%;
  margin: 0;
  background-color: $background;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  position: fixed;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  font-family: helvetica;

  &.horizontal {
    position: static;
    main {
      position: static;
      width: auto;
      height: auto;
      padding-bottom: 150px;
      .mail-container {
        left: 45px;
        bottom: 20px;
      }
      .phone-container {
        right: 45px;
        top: auto;
        bottom: 20px;
        left: auto;
      }
    }
    section {
      display: block;
      height: auto;
      width: 100%;
      position: static;
      &.header {
        height: 60vh;
        position: relative;
        .vertical-wrapper {
          position: absolute;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
        }
      }
      &.form {
        margin: 0;
        position: relative;
        height: 300px;
        @media (max-width: 600px) {
          height: 400px;
        }
        .vertical-wrapper {
          height: 300px;
          width: 80%;
          position: absolute;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
          @media (max-width: 600px) {
            height: 400px;
          }
          form {
            margin: 70px 30px;
          }
        }
      }
      .vertical-wrapper {
        position: static;
        top: auto;
        left: auto;
        transform: none;
      }


    }
  }
}

* {
  box-sizing: border-box;
}

@keyframes spin{
  100%{transform: scale(2.75) rotate(360deg);}
}

@keyframes spin2{
  100%{transform: scale(2.2) rotate(360deg);}
}

